# GraduationProject

./: New Text Document (2).txt  Project Report_V1.docx  project editor.docx  ~$oject Report_V1.docx
Code/GPEditor-master/src/baymax_msgs/: CMakeLists.txt
Code/GPEditor-master/src/baymax_msgs/msg/: baymaxPose.msg
Code/GPEditor-master/src/baymaxrobot/: CMakeLists.txt  package.xml
Code/GPEditor-master/src/baymaxrobot/arduino/firmware/: platformio.ini
Code/GPEditor-master/src/baymaxrobot/arduino/firmware/lib/config/: baymax_base_config.h
Code/GPEditor-master/src/baymaxrobot/arduino/firmware/lib/kinematics/: Kinematics.cpp  Kinematics.h
Code/GPEditor-master/src/baymaxrobot/arduino/firmware/lib/motor/: Motor.cpp  Motor.h
Code/GPEditor-master/src/baymaxrobot/arduino/firmware/lib/pid/: PID.cpp
Code/GPEditor-master/src/baymaxrobot/arduino/firmware/src/firmware/: firmware.ino
Code/GPEditor-master/src/baymaxrobot/launch/: bringup.launch  go_to_goal.launch  mapping.launch  minimal.launch  navigate.launch  navigation.launch
Code/GPEditor-master/src/baymaxrobot/launch/include/: amcl.launch  laser.launch
Code/GPEditor-master/src/baymaxrobot/launch/include/imu/: imu.launch
Code/GPEditor-master/src/baymaxrobot/launch/include/move_base/: move_base_2wd.launch
Code/GPEditor-master/src/baymaxrobot/maps/: hospital.yaml  khaled.pgm  khaled.yaml
Code/GPEditor-master/src/baymaxrobot/motion_files/: location1.txt  read_files.py  result.txt
Code/GPEditor-master/src/baymaxrobot/param/imu/: imu_calib0.yaml
Code/GPEditor-master/src/baymaxrobot/param/navigation/: base_local_planner_default_params.yaml  base_local_planner_holonomic_params.yaml  costmap_common_params.yaml  global_costmap_params.yaml  local_costmap_params.yaml
Code/GPEditor-master/src/baymaxrobot/scripts/: baymaxGUI.ui  baymax_gui.py  commands.py  go_to_goal2.py  go_to_goals.py  out_file.py
Code/GPEditor-master/src/baymaxrobot/src/: baymax_base_node.cpp  go_to_goal.cpp
(+138 files in other folders)
